# CUDAops

./: .gitignore  CMakeLists.txt
GNN_Aggregate/: CMakeLists.txt
GNN_Aggregate/result/: basic_aggregation.nsys-rep
GNN_Aggregate/src/: basic_aggregate.cu  tiled_aggregate.cu
include/: GNNaggregation.cuh  spmv.cuh
kernels/: GNNaggregation.cu  gnn_aggregation_kernel.cu  spmv_kernel.cu
result/: csr_spmv_scalar.nsys-rep  tiled_aggregation.nsys-rep
result/csr_spmv/: scalar_1024_512.nsys-rep  scalar_128_64.nsys-rep  scalar_16_8.nsys-rep  scalar_2048_1024.nsys-rep  scalar_8_4.nsys-rep  vector_1024_512.nsys-rep  vector_128_64.nsys-rep  vector_16_8.nsys-rep  vector_2048_1024.nsys-rep  vector_8_4.nsys-rep
result/csr_spmv_scalar/: row_1024_512.nsys-rep  row_2048_1024.nsys-rep  row_8_4.nsys-rep
src/: basic_aggregate.cu  tiled_aggregate.cu
src/GNNaggregation/: basic_aggregation.cu  tiled_aggregation.cu
src/SpMV/: csr_spmv_adaptive.cu  csr_spmv_scalar.cu  csr_spmv_vector.cu  utils.cpp
